--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Project1</string>
+    <string name="title_name">Dice Rolled!</string>
+    <string name="roll_label">Roll</string>
+    <string name="countup_label">Count Up</string>
 </resources>
