--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_name">Dice Rolled!</string>
     <string name="roll_label">Roll</string>
     <string name="countup_label">Count Up</string>
+    <string name="reset_label">Reset</string>
 </resources>
